After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724921 - Gtk-CRITICAL **: gtk_widget_unregister_window: assertion 'GDK_IS_WINDOW (window)' failed
Gtk-CRITICAL **: gtk_widget_unregister_window: assertion 'GDK_IS_WINDOW (wind...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-02-22 00:06 UTC by Christoph Reiter (lazka)
Modified: 2014-02-22 03:11 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christoph Reiter (lazka) 2014-02-22 00:06:45 UTC
I get many

 Gtk-CRITICAL **: gtk_widget_unregister_window: assertion 'GDK_IS_WINDOW (window)' failed

running my own test suite using GTK+ trunk (revision 596714bcc9a2d2096f7224a25fcdfaa8b96ea6a3)

Stacktrace:

Thread 1 (Thread 0x7ffff7fbd700 (LWP 20422))

  • #0 g_logv
    at gmessages.c line 1038
  • #1 g_log
    at gmessages.c line 1071
  • #2 g_return_if_fail_warning
  • #3 gtk_widget_unregister_window
    at gtkwidget.c line 15109
  • #4 popover_destroy
    at gtkwindow.c line 1349
  • #5 gtk_window_dispose
    at gtkwindow.c line 2688
  • #6 g_object_run_dispose
    at gobject.c line 1073
  • #7 ffi_call_unix64
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #8 ffi_call
    from /usr/lib/x86_64-linux-gnu/libffi.so.6